errors
=== DEBUG: Return Code ===
255

=== DEBUG: STDOUT ===
''

=== DEBUG: STDERR ===
'*******************************************************************************\n*     YOU ARE ACCESSING A U.S. GOVERNMENT (USG) INFORMATION SYSTEM  (IS)      *\n*               THAT IS PROVIDED FOR USG-AUTHORIZED USE ONLY.                 *\n*                                                                             *\n*      BY USING THIS IS (WHICH INCLUDES ANY DEVICE ATTACHED TO THIS IS),      *\n*                 YOU CONSENT TO THE FOLLOWING CONDITIONS:                    *\n*                                                                             *\n*   THE USG  ROUTINELY INTERCEPTS  AND MONITORS COMMUNICATIONS ON THIS IS FOR *\n* PURPOSES INCLUDING,  BUT NOT LIMITED TO, PENETRATION TESTING, COMSEC MONIT- *\n* ORING, NETWORK OPERATIONS  AND  DEFENSE,  PERSONNEL  MISCONDUCT  (PM),  LAW *\n* ENFORCEMENT, AND COUNTERINTELLIGENCE (CI) INVESTIGATIONS.                   *\n*   AT ANY TIME, THE USG MAY INSPECT AND SEIZE DATA STORED ON THIS IS.        *\n*   COMMUNICATIONS USING,  OR DATA STORED ON,  THIS IS ARE NOT  PRIVATE,  ARE *\n* SUBJECT  TO ROUTINE MONITORING, INTERCEPTION,  AND SEARCH,  AND MAY BE DIS- *\n* CLOSED OR USED FOR ANY USG AUTHORIZED PURPOSE.                              *\n*   THIS IS INCLUDES SECURITY MEASURES (e.g., AUTHENTICATION AND ACCESS CONT- *\n* ROLS) TO PROTECT USG INTERESTS--NOT FOR YOUR PERSONAL BENEFIT OR PRIVACY.   *\n*   NOTWITHSTANDING THE ABOVE,  USING THIS IS DOES  NOT CONSTITUTE CONSENT TO *\n* PM, LE, OR CI INVESTIGATIVE SEARCHING OR MONITORING OF THE CONTENT OF PRIV- *\n* ILEGED COMMUNICATIONS, OR WORK PRODUCT, RELATED TO  PERSONAL REPRESENTATION *\n* OR   SERVICES   BY   ATTORNEYS,   PSYCHOTHERAPISTS,  OR  CLERGY,  AND THEIR *\n* ASSISTANTS.   SUCH   COMMUNICATIONS  AND  WORK   PRODUCT  ARE  PRIVATE  AND *\n* CONFIDENTIAL. SEE USER AGREEMENT FOR DETAILS.                               *\n*******************************************************************************\n\nuser@10.1.9.1: Permission denied (publickey,password,keyboard-interactive).\nConnection closed\n'

=== DEBUG: Split Lines ===
Line 0: ''

=== ACTUAL OUTPUT (.log files only) ===

##########################################
=== STDERR (Connection messages) ===
*******************************************************************************
*     YOU ARE ACCESSING A U.S. GOVERNMENT (USG) INFORMATION SYSTEM  (IS)      *
*               THAT IS PROVIDED FOR USG-AUTHORIZED USE ONLY.                 *
*                                                                             *
*      BY USING THIS IS (WHICH INCLUDES ANY DEVICE ATTACHED TO THIS IS),      *
*                 YOU CONSENT TO THE FOLLOWING CONDITIONS:                    *
*                                                                             *
*   THE USG  ROUTINELY INTERCEPTS  AND MONITORS COMMUNICATIONS ON THIS IS FOR *
* PURPOSES INCLUDING,  BUT NOT LIMITED TO, PENETRATION TESTING, COMSEC MONIT- *
* ORING, NETWORK OPERATIONS  AND  DEFENSE,  PERSONNEL  MISCONDUCT  (PM),  LAW *
* ENFORCEMENT, AND COUNTERINTELLIGENCE (CI) INVESTIGATIONS.                   *
*   AT ANY TIME, THE USG MAY INSPECT AND SEIZE DATA STORED ON THIS IS.        *
*   COMMUNICATIONS USING,  OR DATA STORED ON,  THIS IS ARE NOT  PRIVATE,  ARE *
* SUBJECT  TO ROUTINE MONITORING, INTERCEPTION,  AND SEARCH,  AND MAY BE DIS- *
* CLOSED OR USED FOR ANY USG AUTHORIZED PURPOSE.                              *
*   THIS IS INCLUDES SECURITY MEASURES (e.g., AUTHENTICATION AND ACCESS CONT- *
* ROLS) TO PROTECT USG INTERESTS--NOT FOR YOUR PERSONAL BENEFIT OR PRIVACY.   *
*   NOTWITHSTANDING THE ABOVE,  USING THIS IS DOES  NOT CONSTITUTE CONSENT TO *
* PM, LE, OR CI INVESTIGATIVE SEARCHING OR MONITORING OF THE CONTENT OF PRIV- *
* ILEGED COMMUNICATIONS, OR WORK PRODUCT, RELATED TO  PERSONAL REPRESENTATION *
* OR   SERVICES   BY   ATTORNEYS,   PSYCHOTHERAPISTS,  OR  CLERGY,  AND THEIR *
* ASSISTANTS.   SUCH   COMMUNICATIONS  AND  WORK   PRODUCT  ARE  PRIVATE  AND *
* CONFIDENTIAL. SEE USER AGREEMENT FOR DETAILS.                               *
*******************************************************************************

Connected to 10.1.9.1.
Couldn't stat remote file: No such file or directory


=== FILES FOUND ===
#########################################################################################################
=== STDERR (Connection messages) ===
*******************************************************************************
*     YOU ARE ACCESSING A U.S. GOVERNMENT (USG) INFORMATION SYSTEM  (IS)      *
*               THAT IS PROVIDED FOR USG-AUTHORIZED USE ONLY.                 *
*                                                                             *
*      BY USING THIS IS (WHICH INCLUDES ANY DEVICE ATTACHED TO THIS IS),      *
*                 YOU CONSENT TO THE FOLLOWING CONDITIONS:                    *
*                                                                             *
*   THE USG  ROUTINELY INTERCEPTS  AND MONITORS COMMUNICATIONS ON THIS IS FOR *
* PURPOSES INCLUDING,  BUT NOT LIMITED TO, PENETRATION TESTING, COMSEC MONIT- *
* ORING, NETWORK OPERATIONS  AND  DEFENSE,  PERSONNEL  MISCONDUCT  (PM),  LAW *
* ENFORCEMENT, AND COUNTERINTELLIGENCE (CI) INVESTIGATIONS.                   *
*   AT ANY TIME, THE USG MAY INSPECT AND SEIZE DATA STORED ON THIS IS.        *
*   COMMUNICATIONS USING,  OR DATA STORED ON,  THIS IS ARE NOT  PRIVATE,  ARE *
* SUBJECT  TO ROUTINE MONITORING, INTERCEPTION,  AND SEARCH,  AND MAY BE DIS- *
* CLOSED OR USED FOR ANY USG AUTHORIZED PURPOSE.                              *
*   THIS IS INCLUDES SECURITY MEASURES (e.g., AUTHENTICATION AND ACCESS CONT- *
* ROLS) TO PROTECT USG INTERESTS--NOT FOR YOUR PERSONAL BENEFIT OR PRIVACY.   *
*   NOTWITHSTANDING THE ABOVE,  USING THIS IS DOES  NOT CONSTITUTE CONSENT TO *
* PM, LE, OR CI INVESTIGATIVE SEARCHING OR MONITORING OF THE CONTENT OF PRIV- *
* ILEGED COMMUNICATIONS, OR WORK PRODUCT, RELATED TO  PERSONAL REPRESENTATION *
* OR   SERVICES   BY   ATTORNEYS,   PSYCHOTHERAPISTS,  OR  CLERGY,  AND THEIR *
* ASSISTANTS.   SUCH   COMMUNICATIONS  AND  WORK   PRODUCT  ARE  PRIVATE  AND *
* CONFIDENTIAL. SEE USER AGREEMENT FOR DETAILS.                               *
*******************************************************************************

Connected to 10.1.9.1.


=== FILES FOUND ===
security-2025-07-11-1.log
security-2025-07-13-1.log
security-2025-07-14-1.log
security-2025-07-15-1.log
security-2025-07-16-1.log
security-2025-07-17-1.log
security-2025-07-18-1.log
security-2025-07-20-1.log
security-2025-07-21-1.log
security-2025-07-22-1.log
####################################################
  File "/python_script/./discover.py", line 36
    
    ^
SyntaxError: unexpected EOF while parsing




#########output from running script################
[cribl@serverp python_script]$ ./discoverv4.py 
ListValues.log
ObjectMigration-2025-06-13-1.log
ObjectMigration-2025-06-17-1.log
ObjectMigration-2025-06-23-1.log
ObjectMigration-2025-06-28-1.log
ObjectMigration-2025-06-30-1.log
ObjectMigration-2025-07-03-1.log
ObjectMigration-2025-07-04-1.log
ObjectMigration-2025-07-08-1.log
ObjectMigration-2025-07-09-1.log
ObjectMigration-2025-07-24-1.log
